채용공고 01_09_fix